<resources>

    <string name="app_name">SCORECARD TPNi CG</string>
    <string name="Moderado1">Edad ≥ 70</string>
    <string name="Moderado2">Inmunosupresión*</string>
    <string name="Moderado3">Terapia anticoagulante/antiagregación</string>
    <string name="Moderado4"><![CDATA[Hipoalbuminemia (<3 mg/dl)]]></string>
    <string name="Moderado5">Fumador activo</string>
    <string name="Moderado6">ASA grado 3 y 4</string>
    <string name="Alto1"><![CDATA[Diabetes mellitus mal controlada (HbA1c > 7)]]></string>
    <string name="Alto2">Obesidad: IMC ≥ 30 kg/m²</string>
    <string name="Alto3"><![CDATA[Desnutrición severa (IMC <16)]]></string>
    <string name="Moderado7"><![CDATA[Tiempo quirúrgico prolongado (>75% NNIS)]]></string>
    <string name="Moderado8">Cirugía iterativas (≥2 laparotomías)</string>
    <string name="Moderado9">Trasplante de órganos</string>
    <string name="Moderado10">Transfusión sanguínea requerida por la pérdida de sangre</string>
    <string name="Moderado11"><![CDATA[Reintervención temprana <1 mes]]></string>
    <string name="Alto4">Reparación de hernia compleja (SAC)</string>
    <string name="Alto5">Necesidad de disección subcutánea amplia o estado crítico de la herida(alta tensión)</string>
    <string name="Alto6">Cirugía abierta con campo contaminado</string>
    <string name="Alto7">Cirugía colorrectal abierta/ostomía</string>
    <string name="Alto8">Cierre de abdomen abierto</string>
    <string name="Alto9">Cirugía de urgencia</string>
    <string name="Alto10">Post-HIPEC</string>
    <string name="ayuda">Ayuda</string>
    <string name="riesgo_del_paciente">Riesgo del paciente</string>
    <string name="riesgo_del_procedimiento">Riesgo del procedimiento</string>
    <string name="comprobar">Comprobar</string>
    <string name="letras_logotipo">letras logotipo</string>
    <string name="logo_smith_nephew">logo_smith_nephew</string>
    <string name="ref11"><![CDATA[11. Bueno-Lledó J, Rubio-Pérez I, Moreno-Gijón M, Olona-Casas C, Barbosa E, Molina JM, et al. Prophylactic use of incisional negative pressure wound therapy for the prevention of surgical site occurrences in general surgery: Consensus document. Surgery [Internet]. 2022 Dec 31 [cited 2023 Jan 16]; Available from: https://www.sciencedirect.com/science/article/abs/pii/S0039606022010121?CMX_ID=&SIS_ID=&dgcid=STMJ_AUTH_SERV_PUBLISHED&utm_acid=80272470&utm_campaign=STMJ_AUTH_SERV_PUBLISHED&utm_in=DM329951&utm_medium=email&utm_source=AC_]]></string>
    <string name="descripcion_text"><![CDATA[
        Nuestra APP, creada en colaboración con Smith+Nephew, está diseñada para ayudar a cirujanos a identificar <b>pacientes de alto riesgo</b> en cirugía abdominal y colorrectal, facilitando la aplicación de <b>terapia de presión negativa</b> de un solo uso cuando sea adecuado. Basada en la evidencia clínica, esta herramienta optimiza la <b>prevención de complicaciones</b> en el sitio quirúrgico, mejorando la recuperación y <b>reduciendo costes</b> para el sistema sanitario.
        ]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="titulo_intro">Prevenir Complicaciones del Sitio Quirúrgico</string>
    <string name="comenzar">COMENZAR</string>
    <string name="algoritmo_score">Algoritmo / Score</string>
    <string name="mecanismo_de_accion">Mecanismo de acción</string>
    <string name="estudios_bibliografia">Estudios / Bibliografía</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="patrocinado_por">Patrocinado por</string>
    <string name="logo_smith">Logo de la empresa</string>
    <string name="obtener_resultado">Obtener resultado</string>
    <string name="tpn_de_un_solo_uso_durante_7_dias">TPN DE UN SOLO USO DURANTE 7 DÍAS</string>
    <string name="recomendacion_de_aposito">RECOMENDACIÓN DE APÓSITO POSTQUIRÚRGICO</string>
    <string name="recomendacion">Recomendación</string>
    <string name="paciente_de_riesgo_alto">PACIENTE DE RIESGO ALTO</string>
    <string name="imagen_de_recomendaci_n">Imagen de recomendación</string>
    <string name="ver_bibliograf_a_que_respalda_el_resultado">Ver Bibliografía que respalda el resultado</string>
    <string name="se_recomienda_la_utilizacion_germ">\"Se recomienda la utilización de la terapia de presión negativa incisional en las intervenciones quirúrgicas abiertas con cierre de herida primario con el propósito de reducir la proporción de infección del sitio quirúrgico considerando el balance coste-efectividad\"</string>
    <string name="nivel_de_evidencia_germ">\"Nivel de evidencia: alto. Grado de recomendación: Condicional a favor de la intervención\"</string>
    <string name="en_cirugia_abdominal_biblio">En cirugía abdominal la TPN de uso único PICO ha demostrado reducir:*</string>
    <string name="incidencia_de_csq_biblio">• Incidencia de CSQ incluyendo ISQ\n• Estancia hospitalaria ² ⁴⁻⁶\n• Readmisiones ⁵</string>
    <string name="preguntas_frecuentes_title">Preguntas Frecuentes</string>
    <string name="que_significa_cada_indicador_del_dispositivo">¿Qué significa cada indicador del dispositivo?</string>
    <string name="ques_la_reparaci_n_abdominal_compleja_sac">¿Qué es la reparación abdominal compleja (SAC)?</string>
    <string name="reconstrcci_pared_abd">Reconstrucción de pared abdominal con técnicas de complejidad, sobre todo la separación anterior o posterior de componentes. Estas técnicas pueden llevar asociadas prolongados tiempos quirúrgicos y disección amplia</string>
    <string name="que_proc_llevan">¿Qué procedimientos llevan asociados disección subcutánea amplia?</string>
    <string name="principalmente_paniculectom_as_y_abdominoplastias">Principalmente paniculectomías y abdominoplastias.</string>
    <string name="puedo_ponerlo_en_una_herida">¿Puedo ponerlo en una herida de una amputación abominoperineal?</string>
    <string name="respuesta_puedo_ponerlo">Sí, aunque no hay evidencia en la literatura, puede ser una alternativa. Sin embargo, frecuentemente es difícil de pegar el sistema y necesita del ingenio del equipo quirúrgico</string>
    <string name="c_mo_colocamos_el_ap_sito_pico">¿Cómo colocamos el apósito PICO?</string>
    <string name="mecanismo_de_acci_n_title">Mecanismo de Acción</string>
    <string name="evidencia_nnis_text">\"Estas cifras se basan en dos artículos mostrados en el apartado de la bibliografía. No recogen todos los procedimientos que se realizan en cirugía general. En estos casos, anotar el tiempo quirúrgico del procedimiento que más se parezca a estas referencias\".</string>
    <string name="selecciona_tu_idioma">Selecciona tu idioma</string>
    <string name="cambiando_idioma">Cambiando idioma</string>
</resources>